src/Styles/_comments.scss
/*--------------------------------------------------------*\
|   ______    __   |
|  |  __  |  |  |  |
|  | |  | |  |  |  |
|  | !__! |  |  |  |
|  !______!  !__!  |  binary : tech art
|
|  @file Comment list and form styles.
|----------------------------------------------------------
|  @author Valeriy Novytskyy
\*---------------------------------------------------------*/

.comments {
  font-family: $small-font;
  font-size: $small-font-size;
  margin: 0 0 0 $article-indent;
  clear: both;
}

.os-win .comments {
  font-size: $small-font-size-win;
  margin-bottom: -8px;
}

.comments-header {
  color: $secondary-text-color;
  font-family: $small-font;
  font-size: $small-font-size;
  font-weight: $small-font-weight;
  padding-left: 0;
  margin-left: 0;
  margin-bottom: 3pt;
}

.os-win .comments-header {
  font-size: $small-font-size-win;
}

.comments > .metadata {
  margin-bottom: 1em;
}

.comment {
  overflow: auto;
  clear: both;
  border-top: $border-thickness solid $accent-color;
  padding-top: 0;
  padding-bottom: 0;
  margin-top: 0;
  margin-bottom: 0;
  transition: all .15s ease-in-out;
}

.comment:hover {
  background-color: $accent-light-color;
}

.os-win.hi-dpi .comment:hover {
  background-color: desaturate($accent-light-color, 100%);
}

.comment .metadata {
  float: left;
  margin-top: 2pt;
  margin-right: 2pt;
  margin-bottom: 3pt;
}

.comment-official {
  background: $accent-light-color;
}

.comment-content {
  float: left;
  white-space: pre-line;
  margin-top: 2pt;
  margin-bottom: 2pt;
}

.comment-vote {
  position: absolute;
  margin-top: 1pt;
  margin-left: -$small-font-size * 2;
  width: $small-font-size * 3;
  height: $small-font-size * 2;
}

.button-vote {
  cursor: pointer;
  position: absolute;
  left: $small-font-size * .6;
  font-family: 'Webdings';
  opacity: 0;
  transition: opacity .15s ease-in-out;
}

.button-vote:hover {
  color: $primary-hover-color;
}

.button-vote.upvote {
  top: -2pt;
}

.button-vote.downvote {
  top: 5pt;
}

.vote-content {
  float: right;
  padding-top: $border-thickness;
  padding-right: $small-font-size * 1.5;
  transition: all .15s ease-in-out;
  opacity: .5;
}

.vote-default .vote-content {
  opacity: 0;
}

.vote-readonly .button-vote {
  cursor: default;
}

.comment-group:hover {
  .button-vote {
    opacity: 1;
  }

  .vote-content {
    opacity: 1;
    padding-right: $small-font-size * 2.55;
  }

  .vote-readonly {
    .button-vote {
      opacity: 0;
    }

    .vote-content {
      opacity: .5;
      padding-right: $small-font-size * 1.5;
    }
  }

  .vote-default {
    .vote-content {
      opacity: 0;
    }
  }
}

.os-win {
  .comment .metadata {
    margin-top: 0;
    margin-bottom: 2pt;
  }

  .comment-content {
    margin-top: 0;
    margin-bottom: 2pt;
  }
}

.os-win.hi-dpi {
  .comment .metadata {
    margin-top: 1pt;
    margin-bottom: 2pt;
  }

  .comment-content {
    margin-top: 1pt;
    margin-bottom: 2pt;
  }
}

.ie10,
.lt-ie10 {
  .comment .metadata {
    margin-top: 1pt;
    margin-bottom: 3pt;
  }

  .comment-content {
    margin-top: 1pt;
    margin-bottom: 3pt;
  }
}

.comment-entry-toggle {
  display: none;
}

.comment-entry-toggle + label {
  float: left;
  margin-left: .25em;

  &:before {
    font-family: monospace;
    content: '+';
    margin-right: .1em;
  }
}

.comment-entry-toggle:checked + label {
  color: $accent-text-color;

  &:before {
    content: '-';
  }

  &:hover {
    color: $primary-color;
  }
}

.comment-login {
  opacity: 1;
  max-height: 7em;
  float: left;
  transition: opacity .3s .3s ease-in-out,
              max-height .7s ease-in-out;

  &-prompt {
    color: $secondary-text-color;
    float: left;
    margin: 0 .5em 0 .25em;
  }

  form {
    margin-top: -2px;
    margin-bottom: 2px;
    float: left;
  }
}

.os-win .comment-login form {
  margin-top: 0;
}

.comment-entry-toggle:not(:checked) + label + .comment-login {
  opacity: 0;
  max-height: 0;
  overflow: hidden;
  transition: opacity .3s ease-in-out,
              max-height .3s .3s ease-in-out;
}

.comment-entry {
  float: left;
  margin-left: $article-indent;
  width: calc(100% - 1em);

  form {
    position: relative;
    top: 0;
    opacity: 1;
    transition: opacity $animation-fast $animation-fast ease-in-out,
                top $animation-fast $animation-fast ease-in-out;
  }

  textarea {
    width: calc(100% - 6.75em);
    min-height: 27px;
    padding-top: 4px;
    margin: 8px 0 10px 0;
    resize: vertical;
    overflow: hidden;
    transition: all $animation-fast ease-in-out;
  }

  button[type="submit"] {
    position: absolute;
    max-height: 27px;
    margin-top: 0;
    width: 6.25em;
    top: 8px;
    right: 0;
  }
}

.os-win .comment-entry {
  textarea {
    padding-top: 2px;
    margin-bottom: 22px;
  }
}

.comment-entry-toggle:not(:checked) + label + .comment-login + .comment-entry {
  form {
    top: 3em;
    opacity: 0;
    transition: opacity $animation-fast ease-in-out,
                top $animation-fast ease-in-out;
  }

  textarea {
    min-height: 0;
    // Browser and inputResizeFactory set inline style (height) this must override.
    height: 0 !important;
    // Browsers sets inline style (margin-top, margin-bottom) this must override.
    margin: 0 !important;
    transition: all $animation-fast $animation-fast ease-in-out;
  }
}

